--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.12.2",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
